// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An icon on the right 1`] = `
.c0 {
  color: #423E3C;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

.c1 {
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 16px;
  border-bottom: 0px solid #E9E5E4;
}

.c1 > button {
  cursor: pointer;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  padding: 0px 0px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg {
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + div {
  padding-left: 1.5rem;
}

.c3 {
  padding-right: 1.5rem;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c4 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c5 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

.c6 {
  color: #F79572;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h4
          class="c4"
        >
          What is this
        </h4>
        <div
          class="c5"
        >
          Deiscription
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 fa-lg c6"
        color="#F79572"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </li>
</ul>
`;

exports[`Default style with icon on left 1`] = `
.c0 {
  color: #423E3C;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

.c1 {
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 16px;
  border-bottom: 0px solid #E9E5E4;
}

.c1 > button {
  cursor: pointer;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  padding: 0px 0px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg {
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + div {
  padding-left: 1.5rem;
}

.c4 {
  padding-right: 1.5rem;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c5 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c6 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

.c3 {
  color: #B7B1AF;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 c3"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
      <div
        class="c4"
      >
        <h4
          class="c5"
        >
          What is this
        </h4>
        <div
          class="c6"
        >
          Deiscription
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Icon on both left and right 1`] = `
.c0 {
  color: #423E3C;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

.c1 {
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 16px;
  border-bottom: 0px solid #E9E5E4;
}

.c1 > button {
  cursor: pointer;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  padding: 0px 0px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg {
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + div {
  padding-left: 1.5rem;
}

.c4 {
  padding-right: 1.5rem;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c5 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c6 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

.c3 {
  color: #B7B1AF;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 fa-lg c3"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
      <div
        class="c4"
      >
        <h4
          class="c5"
        >
          Turn inj the assignment
        </h4>
        <div
          class="c6"
        >
          CAS171 - Due Feb 15 at 11:59pm
          <br />
          What is going on
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 fa-lg c3"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </li>
</ul>
`;
